breadcrumbs wrap fix

--- a/dev/scss/block/standard/universal/breadcrumbs/_breadcrumbs.scss
+++ b/dev/scss/block/standard/universal/breadcrumbs/_breadcrumbs.scss
@@ -1,5 +1,5 @@
 .breadcrumbs {
-	@include flex-row(nowrap,flex-start,center);
+	@include flex-row(wrap,flex-start,center);
 	background-color: transparent;
 	padding: 6px 4px;
 	z-index: 2;
